# GeekTask

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
task/: models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py
